# smart-farm

./: amine.c  amine.h  client.c  client.h  main.c  nourchen.c  ouvrier.h
GestionCapteurs/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  smartfarm.glade.bak  smartfarm.gladep
GestionCapteurs/autom4te.cache/: output.0  requests  traces.0  traces.1
GestionCapteurs/po/: Makefile  Makefile.in
GestionCapteurs/src/: Makefile  Makefile.am  Makefile.in  alarmantes.txt  callbacks.c  callbacks.h  capteurs.c  capteurs.h  capteurs.txt  defectueux.txt  interface.c  interface.h  main.c  smartfarm  tree.c  tree.h
GestionCapteurs/src/.deps/: callbacks.Po  capteurs.Po  main.Po  tree.Po
equipement/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  equip.txt  equip1.txt  equipement.glade.bak  equipement.gladep
equipement/autom4te.cache/: output.0  requests  traces.0  traces.1
equipement/po/: Makefile  Makefile.in
equipement/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  equip.c  equip.h  equipement  (+3 more)
gestionclient/: Makefile  client.txt  config.status  gestionclient.glade.bak  gestionclient.gladep
projet5/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  projeto.glade.bak  projeto.gladep  projeto.gladep.bak  users.txt
projet5/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  fonction.c  fonction.h  interface.c  interface.c.bak  ouvriers.txt  projeto  tree.c  tree.h  users.txt
projet5/src/.deps/: callbacks.Po  tree.Po
(+25 files in other folders)
